--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -28,12 +28,30 @@
 // header .container .logo span {
 //   color: $primary-color;
 // }
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+
+  &.animate {
+    box-shadow: 0 4px 12px rgba(177, 177, 177, 0.413);
+    animation: slideDown 0.6s ease forwards;
+    padding: 10px 0;
+  }
+
+  @keyframes slideDown {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+}
 header {
   padding: 20px 0;
   width: 100%;
-  /* position: sticky; */
-  top: 0;
-  z-index: 99999999;
+
   background-color: rgba(255, 255, 255, 0.92);
   /* position: -webkit-sticky; */
   transition: all 300ms ease;
